// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalButtons to match snapshot [default] 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-labelledby="modal-label"
    aria-modal="true"
    class="modal show d-block"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-content "
      >
        <div
          class="modal-body px-4 py-4"
        >
          <div
            class="mt-4 modal-buttons"
          >
            <button
              class="mt-3 font-weight-bold btn btn-block btn-bordered border-0"
              data-dismiss="modal"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="modal-backdrop show"
  />
</DocumentFragment>
`;

exports[`ModalButtons to match snapshot [hide cancel button] 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    aria-labelledby="modal-label"
    aria-modal="true"
    class="modal show d-block"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
      role="document"
    >
      <div
        class="modal-content "
      >
        <div
          class="modal-body px-4 py-4"
        >
          <div
            class="mt-4 modal-buttons"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="modal-backdrop show"
  />
</DocumentFragment>
`;
